--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,8 @@ node_modules
 
 # Ignore bower packages
 vendor/assets/components
+
+/app/assets/builds/*
+!/app/assets/builds/.keep
+
+/node_modules
